# AlexAI-assist

./: .gitignore  CLAUDE.md  CUSTOM_COMMANDS_IMPLEMENTATION.md  DASHBOARD_REDESIGN_SUMMARY.md  DECAY_FIXES_COMPLETE.md  DECAY_FIX_SUMMARY.md  MEMORY_SCHEDULER_DECAY_FIXES.md  RATE_LIMITER_IMPLEMENTATION.md  README.md  SECURITY_FIXES.md  URL_CONFIGURATION_CHANGES.md  VERIFICATION_REPORT.md
.github/workflows/: build-mac.yml  ci.yml  deploy-server.yml  deploy-web.yml
apps/ccproxy/: Dockerfile  package.json  server.js
apps/ccproxy/tests/: server.test.js
apps/desktop/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  generate_icons.sh  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  db.rs  main.rs  native_applescript.rs  notifications.rs  permissions.rs  sync.rs  tray.rs  updater.rs
apps/desktop/src-tauri/src/automation/: accessibility_ffi.rs  browser.rs  input.rs  mod.rs  ocr.rs  queue.rs  screen.rs  sync.rs  trust.rs
apps/desktop/src-tauri/src/collector/: accessibility.rs  apps.rs  browser.rs  messenger.rs  mod.rs  screenshots.rs  system_metrics.rs
apps/desktop/src/pages/: Main.tsx  MenuBar.tsx  PermissionsPanel.tsx  Settings.tsx
apps/server/: .env.example  Dockerfile  HEALTH_CHECKS.md  HEALTH_CHECK_IMPLEMENTATION.md  LOGGING.md  QUICKSTART_RATE_LIMITING.md  RETRY_IMPLEMENTATION.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
apps/server/alembic/: env.py
apps/server/alembic/versions/: 001_initial.py  002_add_chat_messages.py  003_add_memory_system.py  003_ultimate_memory_2026.py  004_add_agent_created.py  005_automation_history.py  006_add_audit_logs.py  007_automation_and_sessions.py  008_add_user_settings.py  009_add_event_id_column.py  010_add_performance_indexes.py
apps/server/src/: __init__.py  main.py
apps/server/src/api/: deps.py
apps/server/src/api/middleware/: FLOW.md  README.md  USAGE.md  __init__.py  auth.py  rate_limiter.py  request_logging.py
apps/server/src/api/routes/: __init__.py  agents.py  analytics.py  automation.py  chat.py  events.py  health.py  memory.py  patterns.py  sessions.py  settings.py  suggestions.py
apps/server/src/core/: cache.py  claude.py  config.py  datetime_utils.py  logging.py  retry.py  scheduler.py  security.py  websocket.py
apps/server/src/db/: session.py  types.py
apps/server/src/db/models/: __init__.py  agent.py  audit_log.py  automation.py  chat.py  device.py  event.py  memory.py  pattern.py  session.py  suggestion.py  user_settings.py
apps/server/src/services/: agent_executor.py  agent_manager.py  agent_suggester.py  ai_router.py  analyzer.py  cleanup.py  memory_service.py  pattern_detector.py  session_tracker.py
apps/server/src/services/evolution/: __init__.py  agent_evolution.py  behavior_evolution.py  code_proposals.py  feedback_collector.py  memory_evolution.py  memory_evolution_example.py  orchestrator.py
apps/server/src/services/memory/: CONFIDENCE_UNIFICATION.md  FORMULA_COMPARISON.md  __init__.py  belief_network.py  confidence_utils.py  embeddings.py  experience_network.py  (+6 more)
apps/server/tests/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  __init__.py  conftest.py  test_agent_executor.py  test_api.py  test_claude.py  test_evolution.py  test_memory.py  test_pattern_detector.py  test_retry.py
apps/web/: .env.example  Dockerfile  SECURITY.md  index.html  nixpacks.toml  package-lock.json  package.json  railway.toml  tailwind.config.js  vite.config.ts
apps/web/public/: manifest.json  sw.js
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/web/src/components/: ErrorBoundary.tsx
apps/web/src/hooks/: useAgents.ts  useAnalytics.ts  useApi.ts  useMediaQuery.ts  usePatterns.ts  useWebSocket.ts  useWebSocketSync.ts
apps/web/src/lib/: api.ts  authStorage.ts  config.ts  secureStorage.ts  utils.ts  websocket.ts
apps/web/src/pages/: Agents.tsx  Analytics.tsx  Automation.tsx  Chat.tsx  Dashboard.tsx  Download.tsx  History.tsx  Settings.tsx
apps/web/src/styles/: globals.css
docs/: KNOWN_ISSUES.md
(+65 files in other folders)
