[package]
name = "observer-desktop"
version = "0.1.1"
description = "Observer Desktop App"
authors = ["Observer"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
url = "2.5"
open = "5.0"
image = { version = "0.25", features = ["jpeg"] }
regex = "1.10"
enigo = "0.2"
xcap = "0.0.11"
base64 = "0.21"
once_cell = "1.19"
tokio-tungstenite = "0.21"
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc = "0.2"
cocoa = "0.26"
block = "0.1"
dispatch = "0.2"
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
